// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistryExtensionOverviewPage renders 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-wrap"
  >
    <div
      class="mr-3 readme"
    >
      <div
        class="markdown"
        data-testid="registry-extension-overview"
      >
        <p>
          <strong>
            A
          </strong>
        </p>
        

      </div>
    </div>
    <aside
      class="sidebar"
    >
      <svg
        class="mb-3 icon"
        fill="none"
        height="48"
        width="48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M41.407 23.21c-1.64.468-3.681 3.22-3.757 2.091-.033-.56-.175-1.857-.184-3.18-.025-3.773.193-9.429.193-9.429 0-.192-.017-.376-.059-.552a2.512 2.512 0 00-.72-1.355c-.025-.025-.05-.042-.075-.067a4.077 4.077 0 00-.292-.243c-.11-.075-.235-.142-.352-.209-.05-.025-.092-.05-.142-.075-.025-.009-.05-.017-.067-.025a4.16 4.16 0 00-1.623-.343l-1.548.033s-1.966.067-4.225.117H22.89c-.468-.025-.778-.058-.895-.117-1.255-.586 1.481-2.644 1.891-3.832C24.958 2.894 22.147 0 18.834 0c-3.322 0-6.133 2.895-5.046 6.04.419 1.189 3.288 3.28 1.891 3.833-.184.075-1.23.109-2.593.109h-1.289c-3.104-.009-6.92-.1-6.92-.1L3.33 9.847c-1.389 0-3.004.652-3.246 2.217-.05.209-.084.636-.084.636l.025 11.646c.017.193.034.335.059.385.552 1.397 3.597-2.25 4.785-2.669 3.138-1.096 5.037 3.623 5.037 6.953 0 3.338-2.886 6.15-6.024 5.062-1.188-.419-3.238-3.155-3.823-1.9a.773.773 0 00-.059.243v12.91A2.703 2.703 0 002.694 48h12.5c.167-.017.293-.033.343-.05 1.397-.56-.519-1.866-.895-3.196-.912-3.205.862-3.765 4.192-3.765s4.902.836 4.902 3.12c0 1.172-3.145 3.247-1.89 3.832.041.017.117.034.217.05H34.94a2.703 2.703 0 002.702-2.71s-.268-12.057-.05-13.571c.159-1.096 2.702 1.18 3.815 1.648 4.142 1.724 6.074-1.732 6.074-5.087 0-3.355-2.853-5.982-6.074-5.062z"
          fill="#95A5C6"
          fill-opacity=".32"
        />
      </svg>
      <div
        class="pt-2 pb-3"
      >
        <h2
          class="h2 h3"
        >
          Publisher
        </h2>
        <small>
          x
        </small>
      </div>
      <div
        class="sidebarSection"
      >
        <h3
          class="h3"
        >
          Resources
        </h3>
        <small>
          <a
            class="anchorLink d-block mb-1"
            href="https://example.com"
            rel="nofollow noopener noreferrer"
            target="_blank"
          >
            Source code (JavaScript)
          </a>
          <div
            class="d-flex"
          >
            <githubicon
              class="iconInline mr-1"
            />
            <a
              class="anchorLink d-block"
              href="https://github.com/foo/bar"
              rel="nofollow noreferrer noopener"
              target="_blank"
            >
              Repository
            </a>
          </div>
        </small>
      </div>
      <div
        class="sidebarSection"
      >
        <h3
          class="h3"
        >
          Extension ID
        </h3>
        <small
          class="text-muted"
        >
          x
        </small>
      </div>
      <div
        class="pb-0 sidebarSection"
      >
        <h3
          class="h3"
        >
          Categories
        </h3>
        <ul
          class="list-inline"
          data-testid="test-registry-extension-categories"
        >
          <li
            class="list-inline-item mb-2"
          >
            <a
              class="anchorLink btn btnOutlineSecondary btnSm"
              href="/extensions?category=Programming+languages"
            >
              Programming languages
            </a>
          </li>
          <li
            class="list-inline-item mb-2"
          >
            <a
              class="anchorLink btn btnOutlineSecondary btnSm"
              href="/extensions?category=Other"
            >
              Other
            </a>
          </li>
        </ul>
      </div>
      <div
        class="pb-0 sidebarSection"
      >
        <h3
          class="h3"
        >
          Tags
        </h3>
        <ul
          class="list-inline"
        >
          <li
            class="list-inline-item mb-2"
          >
            <a
              class="anchorLink btn btnOutlineSecondary btnSm tag"
              href="/extensions?query=tag%3AT1"
            >
              T1
            </a>
          </li>
          <li
            class="list-inline-item mb-2"
          >
            <a
              class="anchorLink btn btnOutlineSecondary btnSm tag"
              href="/extensions?query=tag%3AT2"
            >
              T2
            </a>
          </li>
        </ul>
      </div>
    </aside>
  </div>
</DocumentFragment>
`;

exports[`RegistryExtensionOverviewPage renders with no tags 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-wrap"
  >
    <div
      class="mr-3 readme"
    >
      <div
        class="markdown"
        data-testid="registry-extension-overview"
      >
        <p>
          <strong>
            A
          </strong>
        </p>
        

      </div>
    </div>
    <aside
      class="sidebar"
    >
      <svg
        class="mb-3 icon"
        fill="none"
        height="48"
        width="48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M41.407 23.21c-1.64.468-3.681 3.22-3.757 2.091-.033-.56-.175-1.857-.184-3.18-.025-3.773.193-9.429.193-9.429 0-.192-.017-.376-.059-.552a2.512 2.512 0 00-.72-1.355c-.025-.025-.05-.042-.075-.067a4.077 4.077 0 00-.292-.243c-.11-.075-.235-.142-.352-.209-.05-.025-.092-.05-.142-.075-.025-.009-.05-.017-.067-.025a4.16 4.16 0 00-1.623-.343l-1.548.033s-1.966.067-4.225.117H22.89c-.468-.025-.778-.058-.895-.117-1.255-.586 1.481-2.644 1.891-3.832C24.958 2.894 22.147 0 18.834 0c-3.322 0-6.133 2.895-5.046 6.04.419 1.189 3.288 3.28 1.891 3.833-.184.075-1.23.109-2.593.109h-1.289c-3.104-.009-6.92-.1-6.92-.1L3.33 9.847c-1.389 0-3.004.652-3.246 2.217-.05.209-.084.636-.084.636l.025 11.646c.017.193.034.335.059.385.552 1.397 3.597-2.25 4.785-2.669 3.138-1.096 5.037 3.623 5.037 6.953 0 3.338-2.886 6.15-6.024 5.062-1.188-.419-3.238-3.155-3.823-1.9a.773.773 0 00-.059.243v12.91A2.703 2.703 0 002.694 48h12.5c.167-.017.293-.033.343-.05 1.397-.56-.519-1.866-.895-3.196-.912-3.205.862-3.765 4.192-3.765s4.902.836 4.902 3.12c0 1.172-3.145 3.247-1.89 3.832.041.017.117.034.217.05H34.94a2.703 2.703 0 002.702-2.71s-.268-12.057-.05-13.571c.159-1.096 2.702 1.18 3.815 1.648 4.142 1.724 6.074-1.732 6.074-5.087 0-3.355-2.853-5.982-6.074-5.062z"
          fill="#95A5C6"
          fill-opacity=".32"
        />
      </svg>
      <div
        class="pt-2 pb-3"
      >
        <h2
          class="h2 h3"
        >
          Publisher
        </h2>
        <small>
          x
        </small>
      </div>
      <div
        class="sidebarSection"
      >
        <h3
          class="h3"
        >
          Resources
        </h3>
        <small>
          <a
            class="anchorLink d-block mb-1"
            href="https://example.com"
            rel="nofollow noopener noreferrer"
            target="_blank"
          >
            Source code (JavaScript)
          </a>
          <div
            class="d-flex"
          >
            <githubicon
              class="iconInline mr-1"
            />
            <a
              class="anchorLink d-block"
              href="https://github.com/foo/bar"
              rel="nofollow noreferrer noopener"
              target="_blank"
            >
              Repository
            </a>
          </div>
        </small>
      </div>
      <div
        class="sidebarSection"
      >
        <h3
          class="h3"
        >
          Extension ID
        </h3>
        <small
          class="text-muted"
        >
          x
        </small>
      </div>
      <div
        class="pb-0 sidebarSection"
      >
        <h3
          class="h3"
        >
          Categories
        </h3>
        <ul
          class="list-inline"
          data-testid="test-registry-extension-categories"
        >
          <li
            class="list-inline-item mb-2"
          >
            <a
              class="anchorLink btn btnOutlineSecondary btnSm"
              href="/extensions?category=Programming+languages"
            >
              Programming languages
            </a>
          </li>
          <li
            class="list-inline-item mb-2"
          >
            <a
              class="anchorLink btn btnOutlineSecondary btnSm"
              href="/extensions?category=Other"
            >
              Other
            </a>
          </li>
        </ul>
      </div>
    </aside>
  </div>
</DocumentFragment>
`;
